src.new/python/pysuv/srcn/src/uv.pxd


    cdef int uv_write(uv_write_t* req,
                       uv_stream_t* handle,
                       const uv_buf_t bufs[],
                       unsigned int nbufs,
                       uv_write_cb cb)
    cdef int uv_write2(uv_write_t* req,
                        uv_stream_t* handle,
                        const uv_buf_t bufs[],
                        unsigned int nbufs,
                        uv_stream_t* send_handle,
                        uv_write_cb cb)    
    cdef int uv_try_write(uv_stream_t* handle,
                           const uv_buf_t bufs[],
                           unsigned int nbufs)
    cdef int uv_try_write2(uv_stream_t* handle,
                            const uv_buf_t bufs[],
                            unsigned int nbufs,
                            uv_stream_t* send_handle)
    """
    /* uv_write_t is a subclass of uv_req_t. */
    struct uv_write_s {
      UV_REQ_FIELDS
      uv_write_cb cb    
      uv_stream_t* send_handle     /* TODO: make private and unix-only in v2.x. */
      uv_stream_t* handle    
      UV_WRITE_PRIVATE_FIELDS
    }    
    """

    cdef int uv_is_readable(const uv_stream_t* handle)
    cdef int uv_is_writable(const uv_stream_t* handle)

    cdef int uv_stream_set_blocking(uv_stream_t* handle, int blocking)

    cdef int uv_is_closing(const uv_handle_t* handle)

    """
    /*
    * uv_tcp_t is a subclass of uv_stream_t.
    *
    * Represents a TCP stream or TCP server.
    */
    struct uv_tcp_s {
      UV_HANDLE_FIELDS
      UV_STREAM_FIELDS
      UV_TCP_PRIVATE_FIELDS
    }    
    """
    cdef int uv_tcp_init(uv_loop_t*, uv_tcp_t* handle)
    cdef int uv_tcp_init_ex(uv_loop_t*, uv_tcp_t* handle, unsigned int flags)
    cdef int uv_tcp_open(uv_tcp_t* handle, uv_os_sock_t sock)    
    cdef int uv_tcp_nodelay(uv_tcp_t* handle, int enable)    
    cdef int uv_tcp_keepalive(uv_tcp_t* handle,
                               int enable,
                               unsigned int delay)    
    cdef int uv_tcp_simultaneous_accepts(uv_tcp_t* handle, int enable)    

    cdef enum uv_tcp_flags:
      """/* Used with uv_tcp_bind, when an IPv6 address is used. */"""
      UV_TCP_IPV6ONLY = 1

    cdef int uv_tcp_bind(uv_tcp_t* handle,
                          const struct sockaddr* addr,
                          unsigned int flags)    
    cdef int uv_tcp_getsockname(const uv_tcp_t* handle,
                                 struct sockaddr* name,
                                 int* namelen)    
    cdef int uv_tcp_getpeername(const uv_tcp_t* handle,
                                 struct sockaddr* name,
                                 int* namelen)    
    cdef int uv_tcp_close_reset(uv_tcp_t* handle, uv_close_cb close_cb)    
    cdef int uv_tcp_connect(uv_connect_t* req,
                             uv_tcp_t* handle,
                             const struct sockaddr* addr,
                             uv_connect_cb cb)    

    """/* uv_connect_t is a subclass of uv_req_t. */
    struct uv_connect_s {
      UV_REQ_FIELDS
      uv_connect_cb cb    
      uv_stream_t* handle    
      UV_CONNECT_PRIVATE_FIELDS
    }    
    """


    """/*
    * UDP support.
    */"""

    cdef enum uv_udp_flags:
      """/* Disables dual stack mode. */"""
      UV_UDP_IPV6ONLY = 1,
      """/*
      * Indicates message was truncated because read buffer was too small. The
      * remainder was discarded by the OS. Used in uv_udp_recv_cb.
      */"""
      UV_UDP_PARTIAL = 2,
      """/*
      * Indicates if SO_REUSEADDR will be set when binding the handle.
      * This sets the SO_REUSEPORT socket flag on the BSDs and OS X. On other
      * Unix platforms, it sets the SO_REUSEADDR flag.  What that means is that
      * multiple threads or processes can bind to the same address without error
      * (provided they all set the flag) but only the last one to bind will receive
      * any traffic, in effect "stealing" the port from the previous listener.
      */"""
      UV_UDP_REUSEADDR = 4,
      """/*
      * Indicates that the message was received by recvmmsg, so the buffer provided
      * must not be freed by the recv_cb callback.
      */"""
      UV_UDP_MMSG_CHUNK = 8,
      """/*
      * Indicates that the buffer provided has been fully utilized by recvmmsg and
      * that it should now be freed by the recv_cb callback. When this flag is set
      * in uv_udp_recv_cb, nread will always be 0 and addr will always be NULL.
      */"""
      UV_UDP_MMSG_FREE = 16,
      """/*
      * Indicates if IP_RECVERR/IPV6_RECVERR will be set when binding the handle.
      * This sets IP_RECVERR for IPv4 and IPV6_RECVERR for IPv6 UDP sockets on
      * Linux. This stops the Linux kernel from suppressing some ICMP error
      * messages and enables full ICMP error reporting for faster failover.
      * This flag is no-op on platforms other than Linux.
      */"""
      UV_UDP_LINUX_RECVERR = 32,
      """/*
      * Indicates that recvmmsg should be used, if available.
      */"""
      UV_UDP_RECVMMSG = 256

    ctypedef void (*uv_udp_send_cb)(uv_udp_send_t* req, int status)    
    ctypedef void (*uv_udp_recv_cb)(uv_udp_t* handle,
                                  ssize_t nread,
                                  const uv_buf_t* buf,
                                  const struct sockaddr* addr,
                                  unsigned flags)    

    """/* uv_udp_t is a subclass of uv_handle_t. */
    struct uv_udp_s {
      UV_HANDLE_FIELDS
      /* read-only */
      /*
      * Number of bytes queued for sending. This field strictly shows how much
      * information is currently queued.
      */
      size_t send_queue_size    
      /*
      * Number of send requests currently in the queue awaiting to be processed.
      */
      size_t send_queue_count    
      UV_UDP_PRIVATE_FIELDS
    }    

    /* uv_udp_send_t is a subclass of uv_req_t. */
    struct uv_udp_send_s {
      UV_REQ_FIELDS
      uv_udp_t* handle    
      uv_udp_send_cb cb    
      UV_UDP_SEND_PRIVATE_FIELDS
    }    

        int uv_udp_init(uv_loop_t*, uv_udp_t* handle)    
        int uv_udp_init_ex(uv_loop_t*, uv_udp_t* handle, unsigned int flags)    
        int uv_udp_open(uv_udp_t* handle, uv_os_sock_t sock)    
        int uv_udp_bind(uv_udp_t* handle,
                              const struct sockaddr* addr,
                              unsigned int flags)    
        int uv_udp_connect(uv_udp_t* handle, const struct sockaddr* addr)    

        int uv_udp_getpeername(const uv_udp_t* handle,
                                    struct sockaddr* name,
                                    int* namelen)    
        int uv_udp_getsockname(const uv_udp_t* handle,
                                    struct sockaddr* name,
                                    int* namelen)    
        int uv_udp_set_membership(uv_udp_t* handle,
                                        const char* multicast_addr,
                                        const char* interface_addr,
                                        uv_membership membership)    
        int uv_udp_set_source_membership(uv_udp_t* handle,
                                              const char* multicast_addr,
                                              const char* interface_addr,
                                              const char* source_addr,
                                              uv_membership membership)    
        int uv_udp_set_multicast_loop(uv_udp_t* handle, int on)    
        int uv_udp_set_multicast_ttl(uv_udp_t* handle, int ttl)    
        int uv_udp_set_multicast_interface(uv_udp_t* handle,
                                                const char* interface_addr)    
        int uv_udp_set_broadcast(uv_udp_t* handle, int on)    
        int uv_udp_set_ttl(uv_udp_t* handle, int ttl)    
        int uv_udp_send(uv_udp_send_t* req,
                              uv_udp_t* handle,
                              const uv_buf_t bufs[],
                              unsigned int nbufs,
                              const struct sockaddr* addr,
                              uv_udp_send_cb send_cb)    
        int uv_udp_try_send(uv_udp_t* handle,
                                  const uv_buf_t bufs[],
                                  unsigned int nbufs,
                                  const struct sockaddr* addr)    
        int uv_udp_recv_start(uv_udp_t* handle,
                                    uv_alloc_cb alloc_cb,
                                    uv_udp_recv_cb recv_cb)    
        int uv_udp_using_recvmmsg(const uv_udp_t* handle)    
        int uv_udp_recv_stop(uv_udp_t* handle)    
        size_t uv_udp_get_send_queue_size(const uv_udp_t* handle)    
        size_t uv_udp_get_send_queue_count(const uv_udp_t* handle)    

    
    /*
    * uv_tty_t is a subclass of uv_stream_t.
    *
    * Representing a stream for the console.
    */
    struct uv_tty_s{
      UV_HANDLE_FIELDS
      UV_STREAM_FIELDS
      UV_TTY_PRIVATE_FIELDS
    };
    """
    ctypedef enum uv_tty_mode_t:
      """/* Initial/normal terminal mode */"""
      UV_TTY_MODE_NORMAL,
      """/* Raw input mode (On Windows, ENABLE_WINDOW_INPUT is also enabled) */"""
      UV_TTY_MODE_RAW,
      """/* Binary-safe I/O mode for IPC (Unix-only) */"""
      UV_TTY_MODE_IO  
    ctypedef enum uv_tty_vtermstate_t:
      """
      /*
      * The console supports handling of virtual terminal sequences
      * (Windows10 new console, ConEmu)
      */
      """
      UV_TTY_SUPPORTED,
      """
      /* The console cannot process the virtual terminal sequence.  (Legacy
      * console)
      */
      """
      UV_TTY_UNSUPPORTED 


    cdef int uv_tty_init(uv_loop_t*, uv_tty_t*, uv_file fd, int readable)    
    cdef int uv_tty_set_mode(uv_tty_t*, uv_tty_mode_t mode)    
    cdef int uv_tty_reset_mode(void)    
    cdef int uv_tty_get_winsize(uv_tty_t*, int* width, int* height)    
    cdef void uv_tty_set_vterm_state(uv_tty_vtermstate_t state)    
    cdef int uv_tty_get_vterm_state(uv_tty_vtermstate_t* state)    

    """
    #ifdef __cplusplus
    extern "C++" {
    """

    inline int uv_tty_set_mode(uv_tty_t* handle, int mode) {
      return uv_tty_set_mode(handle, static_cast<uv_tty_mode_t>(mode))    
    }
    """
    }
    #endif
    """

    cdef uv_handle_type uv_guess_handle(uv_file file)    
